реализация второго варианта TaskManager